tests/errors/unprovable-cons.fil
import "primitives/core.fil";

// This program should fail type checking because we do not provide evidence
// that L > G.
comp Main<G: L-(G), L: 1>(
  @interface[G] go_G: 1,
  @interface[L] go_L: 1,
  @[G, G+1] left: 32,
  @[L, L+1] right: 32
) -> (
  @[L+2, L+3] out: 32
) {
  L := new Register[32];
  l0 := L<G, L+1>(left);
  out = l0.out;
}
